Turn clippy on for all features and fix warnings

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
 
     - name: Clippy
       run: |
-        cargo clippy -- -D warnings
+        cargo clippy --all-features -- -D warnings
     - name: Rustfmt
       run: |
         cargo fmt -- --check
