--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,9 +3,11 @@ on:
   push:
     branches:
     - master
+    - test-actions
   pull_request:
     branches:
     - master
+    - test-actions
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -20,6 +22,10 @@ jobs:
     
     - name: Test (Lua 5.2)
       run: cargo test --features lua52
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v1
 
     - name: Clippy
       run: |
