--- a/stylua-vscode/package.json
+++ b/stylua-vscode/package.json
@@ -59,6 +59,8 @@
     "watch": "tsc -watch -p ./",
     "pretest": "npm run compile && npm run lint",
     "lint": "eslint src --ext ts",
+    "format": "prettier --write src",
+    "check:format": "prettier --check src",
     "test": "node ./out/test/runTest.js"
   },
   "devDependencies": {
@@ -73,6 +75,7 @@
     "eslint": "^7.20.0",
     "glob": "^7.1.6",
     "mocha": "^8.3.0",
+    "prettier": "^2.3.1",
     "typescript": "^4.2.2",
     "vscode-test": "^1.5.1"
   },
