--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ lua52 = ["full_moon/lua52"]
 [dependencies]
 anyhow = "1.0.41"
 console = "0.14.1"
+crossbeam-channel = "0.5.1"
 directories = "3.0.2"
 full_moon = { version="0.12.1" }
 globset = "0.4.8"
@@ -36,6 +37,7 @@ regex = "1.5.4"
 serde = "1.0.126"
 similar = { version="1.3.0", features=["text", "inline"] }
 structopt = "0.3.21"
+threadpool = "1.8.1"
 toml = "0.5.8"
 
 [dev-dependencies]
