--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ full_moon = { version="0.12.1" }
 globset = "0.4.8"
 ignore = "0.4.18"
 lazy_static = "1.4.0"
+num_cpus = "1.13.0"
 regex = "1.5.4"
 serde = "1.0.126"
 similar = { version="1.3.0", features=["text", "inline"] }
