--- a/stylua-vscode/package.json
+++ b/stylua-vscode/package.json
@@ -42,6 +42,27 @@
     "configuration": {
       "title": "StyLua",
       "properties": {
+        "stylua.releaseVersion": {
+          "type": "string",
+          "default": "latest",
+          "enum": [
+            "latest",
+            "v0.9",
+            "v0.8",
+            "v0.7",
+            "v0.6",
+            "v0.5"
+          ],
+          "enumDescriptions": [
+            "The most recent version released. This will always keep you up to date."
+          ],
+          "markdownDescription": "The release version to install. This is overridden by `#stylua.targetReleaseVersion#`."
+        },
+        "stylua.targetReleaseVersion": {
+          "type": "string",
+          "default": "",
+          "markdownDescription": "Target a specific release version tag such as `v0.9.1` or `v0.9`. This overrides the version set by `#stylua.releaseVersion#`."
+        },
         "stylua.styluaPath": {
           "type": [
             "string",
