--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,15 +27,18 @@ lua52 = ["full_moon/lua52"]
 [dependencies]
 anyhow = "1.0.41"
 console = "0.14.1"
+crossbeam-channel = "0.5.1"
 directories = "3.0.2"
 full_moon = { version="0.13.0" }
 globset = "0.4.8"
 ignore = "0.4.18"
 lazy_static = "1.4.0"
+num_cpus = "1.13.0"
 regex = "1.5.4"
 serde = "1.0.126"
 similar = { version="1.3.0", features=["text", "inline"] }
 structopt = "0.3.21"
+threadpool = "1.8.1"
 toml = "0.5.8"
 
 [dev-dependencies]
