Switch pre-commit language to Rust so pre-commit can build StyLua from source
The previous pre-commit config required having StyLua already installed.

--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -3,6 +3,6 @@
   name: StyLua
   description: An opinionated Lua code formatter
   entry: stylua
-  language: system
+  language: rust
   types:
     - lua
