Actually make system hook a system hook

--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -11,6 +11,6 @@
   name: StyLua (system)
   description: An opinionated Lua code formatter
   entry: stylua
-  language: rust
+  language: system
   types:
     - lua
