--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,7 @@ lua52 = ["full_moon/lua52"]
 anyhow = "1.0.41"
 console = "0.14.1"
 crossbeam-channel = "0.5.1"
-full_moon = { git = "https://github.com/Kampfkarren/full-moon", version = "0.14.0" }
+full_moon = "0.15.0"
 globset = "0.4.8"
 ignore = "0.4.18"
 lazy_static = "1.4.0"
