--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,6 +43,7 @@ toml = "0.5.8"
 [dev-dependencies]
 criterion = "0.3.4"
 insta = { version = "1.12.0", features = ["glob"] }
+assert_cmd = "2.0.4"
 
 [[bench]]
 name = "date"
