--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -29,7 +29,7 @@ jobs:
           LLVM_PROFILE_FILE: "report-%p-%m.profraw"
 
       - name: Run grcov
-        run: ./grcov . -s . --binary-path ./target/debug/ -t lcov --branch --ignore-not-existing -o coverage.lcov
+        run: ./grcov . -s . --binary-path ./target/debug/ -t lcov --branch --ignore-not-existing -o coverage.lcov --ignore src/cli/*
 
       - name: Upload
         uses: codecov/codecov-action@v2
