--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ lua52 = ["full_moon/lua52"]
 
 [dependencies]
 anyhow = "1.0.53"
+clap = { version = "3.1.6", features = ["derive"] }
 console = "0.15.0"
 crossbeam-channel = "0.5.2"
 env_logger = { version = "0.9.0", default-features = false }
@@ -38,7 +39,6 @@ num_cpus = "1.13.1"
 regex = "1.5.4"
 serde = "1.0.136"
 similar = { version = "2.1.0", features = ["text", "inline"] }
-structopt = "0.3.26"
 threadpool = "1.8.1"
 toml = "0.5.8"
 
