--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,7 +38,8 @@ log = "0.4.14"
 num_cpus = "1.13.1"
 regex = "1.5.4"
 serde = "1.0.136"
-similar = { version = "2.1.0", features = ["text", "inline"] }
+serde_json = "1.0.79"
+similar = { version = "2.1.0", features = ["text", "inline", "serde"] }
 threadpool = "1.8.1"
 toml = "0.5.8"
 
