--- a/.github/workflows/large-scale-test.yml
+++ b/.github/workflows/large-scale-test.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   build-latest:
-    if: ${{ github.event.issue.pull_request && ${{ github.event.sender.login }} == "JohnnyMorganz" && startsWith(github.event.comment.body, 'run-comparison') }}
+    if: ${{ github.event.issue.pull_request }} && ${{ github.event.sender.login }} == "JohnnyMorganz" && ${{ startsWith(github.event.comment.body, 'run-comparison') }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -26,6 +26,7 @@ jobs:
           path: target/release/stylua
 
   build-master:
+    if: ${{ github.event.issue.pull_request }} && ${{ github.event.sender.login }} == "JohnnyMorganz" && ${{ startsWith(github.event.comment.body, 'run-comparison') }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
