--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -51,13 +51,13 @@ jobs:
         submodules: true
 
     - name: Build (All features)
-      run: cargo build --locked --verbose --release --all-features
+      run: cargo build --locked --verbose --release --all-features --target x86_64-unknown-linux-gnu
 
     - name: Upload artifacts
       uses: actions/upload-artifact@v1
       with:
         name: stylua-linux
-        path: target/release/stylua
+        path: target/x86_64-unknown-linux-gnu/release/stylua
 
   release:
     runs-on: ubuntu-latest
