--- a/.github/workflows/test-cases.yml
+++ b/.github/workflows/test-cases.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   retrieve_cases:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v1
 
