--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,6 +40,7 @@ regex = "1.5.4"
 serde = "1.0.136"
 serde_json = "1.0.79"
 similar = { version = "2.1.0", features = ["text", "inline", "serde"] }
+thiserror = "1.0.31"
 threadpool = "1.8.1"
 toml = "0.5.8"
 
