--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,12 @@ jobs:
 
     - name: Test (Lua 5.2)
       run: cargo test --features lua52
+    
+    - name: Test Build (wasm)
+      run: |
+        rustup target add wasm32-unknown-unknown
+        cargo check --target wasm32-unknown-unknown
+
   lint:
     runs-on: ubuntu-18.04
     steps:
