--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ exclude = ["stylua-vscode/**", "tests/**"]
 [lib]
 name = "stylua_lib"
 path = "src/lib.rs"
+crate-type = ["cdylib", "rlib"]
 
 [[bin]]
 name = "stylua"
@@ -43,6 +44,9 @@ similar = { version = "2.1.0", features = ["text", "inline", "serde"] }
 thiserror = "1.0.31"
 threadpool = "1.8.1"
 toml = "0.5.8"
+
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+wasm-bindgen = "0.2.81"
 
 [dev-dependencies]
 criterion = "0.3.4"
