--- a/.github/workflows/large-scale-test.yml
+++ b/.github/workflows/large-scale-test.yml
@@ -6,15 +6,16 @@ on:
         description: "PR #"
         required: true
         type: number
-  issue_comment:
-    types: [created]
 
 jobs:
   build-latest:
-    if: ${{ github.event.issue.pull_request }} && ${{ github.event.sender.login }} == "JohnnyMorganz" && ${{ startsWith(github.event.comment.body, 'run-comparison') }}
+    name: Build Pull Request (#${{ github.event.inputs.prId }})
     runs-on: ubuntu-18.04
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout Pull Request
+        run: hub pr checkout ${{ github.event.inputs.prId }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build (All features)
         run: cargo build --verbose --locked --release --all-features
@@ -26,7 +27,7 @@ jobs:
           path: target/release/stylua
 
   build-master:
-    if: ${{ github.event.issue.pull_request }} && ${{ github.event.sender.login }} == "JohnnyMorganz" && ${{ startsWith(github.event.comment.body, 'run-comparison') }}
+    name: Build Master
     runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v3
@@ -70,5 +71,5 @@ jobs:
       - name: Create comment
         uses: peter-evans/create-or-update-comment@v2
         with:
-          issue-number: ${{ github.event.issue.number || github.event.inputs.prId }}
+          issue-number: ${{ github.event.inputs.prId }}
           body: ${{ steps.run_comparison.outputs.body }}
