--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -16,7 +16,7 @@ jobs:
       - uses: actions/checkout@v2
       # - run: rustup toolchain update nightly && rustup default nightly
       - name: Run benchmark
-        run: cargo bench --output-format bencher | tee output.txt # +nightly
+        run: cargo bench -- --output-format bencher | tee output.txt # +nightly
 
       - name: Store benchmark result
         uses: benchmark-action/github-action-benchmark@v1
