--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ lua52 = ["full_moon/lua52"]
 
 [dependencies]
 anyhow = "1.0.53"
+cfg-if = "1.0.0"
 clap = { version = "3.1.6", features = ["derive"] }
 console = "0.15.0"
 crossbeam-channel = "0.5.4"
