--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,6 +47,7 @@ similar = { version = "2.1.0", features = ["text", "inline", "serde"] }
 thiserror = "1.0.31"
 threadpool = "1.8.1"
 toml = "0.5.8"
+pretty = "0.11.3"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 wasm-bindgen = "0.2.81"
