--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,7 +38,7 @@ jobs:
             cargo-target: x86_64-apple-darwin
           - os: macos-latest
             artifact-name: stylua-macos-aarch64
-            cargo-target: x86_64-apple-darwin
+            cargo-target: aarch64-apple-darwin
 
     name: Build (${{ matrix.artifact-name }})
     runs-on: ${{ matrix.os }}
