--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -2,10 +2,10 @@ name: Code Coverage
 on:
   push:
     branches:
-      - master
+      - main
   pull_request:
     branches:
-      - master
+      - main
 jobs:
   coverage:
     runs-on: ubuntu-18.04
