--- a/.github/workflows/extension.yml
+++ b/.github/workflows/extension.yml
@@ -2,10 +2,10 @@ name: VSCode Extension
 on:
   push:
     branches:
-      - master
+      - main
   pull_request:
     branches:
-      - master
+      - main
 jobs:
   lint:
     runs-on: ubuntu-18.04
