Build with ubuntu-latest

--- a/.github/workflows/large-scale-test.yml
+++ b/.github/workflows/large-scale-test.yml
@@ -18,7 +18,7 @@ on:
 jobs:
   build-latest:
     name: Build Pull Request (#${{ github.event.inputs.prId }})
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
 
@@ -38,7 +38,7 @@ jobs:
 
   build-main:
     name: Build Main
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
         with:
