--- a/stylua-vscode/package.json
+++ b/stylua-vscode/package.json
@@ -85,6 +85,11 @@
           "type": "boolean",
           "default": false,
           "description": "Disable checking the version of stylua for newer versions. Useful if you do not want network requests"
+        },
+        "stylua.searchParentDirectories": {
+          "type": "boolean",
+          "default": false,
+          "description": "Search parent directories for a stylua configuration file if one is not directly available."
         }
       }
     }
