--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,9 +4,9 @@ build-backend = "pseudo_builder"
 
 [tool.release-gitter]
 extract-files = ["stylua"]
-format = "stylua-{system}.zip"
+format = "stylua-{system}-{arch}.zip"
 exec = "chmod +x stylua"
 [tool.release-gitter.map-system]
 Darwin = "macos"
-Windows = "win64"
+Windows = "windows"
 Linux = "linux"
