--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -60,8 +60,8 @@ jobs:
           profile: minimal
 
       - name: Install aarch64 c toolchain
+        if: ${{ matrix.cargo-target == 'aarch64-unknown-linux-gnu' }}
         run: apt-get install -y --force-yes --no-install-recommends gcc-aarch64-linux-gnu libc6-arm64-cross libc6-dev-arm64-cross
-        if: ${{ matrix.cargo-target == "aarch64-unknown-linux-gnu" }}
 
       - name: Build Binary (All features)
         run: cargo build --verbose --locked --release --all-features --target ${{ matrix.cargo-target }}
