--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,8 @@ bench = false
 default = []
 luau = ["full_moon/roblox"]
 lua52 = ["full_moon/lua52"]
+lua53 = ["full_moon/lua53"]
+lua54 = ["full_moon/lua54"]
 
 [dependencies]
 anyhow = "1.0.53"
