--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,7 +36,8 @@ clap = { version = "3.1.6", features = ["derive"] }
 console = "0.15.0"
 crossbeam-channel = "0.5.4"
 env_logger = { version = "0.9.0", default-features = false }
-full_moon = "0.15.1"
+# full_moon = "0.15.1"
+full_moon = { git = "https://github.com/Kampfkarren/full-moon" }
 globset = "0.4.8"
 ignore = "0.4.18"
 lazy_static = "1.4.0"
