Parallelise test workflow jobs

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,26 +7,45 @@ on:
     branches:
       - main
 jobs:
-  test:
+  test_default:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
-
       - name: Test (default)
         run: cargo test
 
+  test_luau:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v1
       - name: Test (Luau)
         run: cargo test --features luau
 
+  test_lua52:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v1
       - name: Test (Lua 5.2)
         run: cargo test --features lua52
 
+  test_lua53:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v1
       - name: Test (Lua 5.3)
         run: cargo test --features lua53
 
+  test_lua54:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v1
       - name: Test (Lua 5.4)
         run: cargo test --features lua54
 
+  test_wasm:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v1
       - name: Test Build (wasm)
         run: |
           rustup target add wasm32-unknown-unknown
