--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ bench = false
 
 [features]
 default = []
+serialize = []
 luau = ["full_moon/roblox"]
 lua52 = ["full_moon/lua52"]
 lua53 = ["lua52", "full_moon/lua53"]
