--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ bench = false
 [features]
 default = []
 serialize = []
+fromstr = ["strum"]
 luau = ["full_moon/roblox"]
 lua52 = ["full_moon/lua52"]
 lua53 = ["lua52", "full_moon/lua53"]
@@ -47,6 +48,7 @@ regex = "1.5.4"
 serde = "1.0.136"
 serde_json = "1.0.79"
 similar = { version = "2.1.0", features = ["text", "inline", "serde"] }
+strum = { version = "0.24.1", features = ["derive"], optional = true }
 thiserror = "1.0.31"
 threadpool = "1.8.1"
 toml = "0.5.8"
