Add `wasm-bindgen` feature

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ path = "src/cli/main.rs"
 bench = false
 
 [features]
-default = []
+default = ["wasm-bindgen"]
 serialize = []
 fromstr = ["strum"]
 luau = ["full_moon/roblox"]
@@ -54,7 +54,7 @@ threadpool = "1.8.1"
 toml = "0.5.8"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
-wasm-bindgen = "0.2.81"
+wasm-bindgen = { version = "0.2.81", optional = true }
 
 [dev-dependencies]
 criterion = "0.3.4"
