--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,9 @@ path = "src/cli/main.rs"
 bench = false
 
 [features]
-default = []
+default = ["wasm-bindgen"]
+serialize = []
+fromstr = ["strum"]
 luau = ["full_moon/roblox"]
 lua52 = ["full_moon/lua52"]
 lua53 = ["lua52", "full_moon/lua53"]
@@ -46,12 +48,13 @@ regex = "1.5.4"
 serde = "1.0.136"
 serde_json = "1.0.79"
 similar = { version = "2.1.0", features = ["text", "inline", "serde"] }
+strum = { version = "0.24.1", features = ["derive"], optional = true }
 thiserror = "1.0.31"
 threadpool = "1.8.1"
 toml = "0.5.8"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
-wasm-bindgen = "0.2.81"
+wasm-bindgen = { version = "0.2.81", optional = true }
 
 [dev-dependencies]
 criterion = "0.3.4"
