--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -26,6 +26,11 @@ jobs:
           tags: |
             type=semver,pattern={{version}}
 
+      - uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN
+
       - uses: docker/build-push-action@v4
         with:
           push: ${{ steps.meta.outputs.tags != '' }}
