--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -183,3 +183,39 @@ jobs:
         run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+
+  release_docker:
+    name: Publish image to container registry
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+
+      - uses: docker/setup-buildx-action@v2
+        id: buildx
+        with:
+          install: true
+
+      - uses: docker/metadata-action@v4
+        id: meta
+        env:
+          DOCKER_METADATA_PR_HEAD_SHA: "true"
+        with:
+          images: JohnnyMorganz/StyLua
+          tags: |
+            type=semver,pattern={{version}}
+
+      - uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - uses: docker/build-push-action@v4
+        with:
+          push: ${{ steps.meta.outputs.tags != '' }}
+          context: .
+          file: Dockerfile
+          builder: ${{ steps.buildx.outputs.name }}
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=gha
+          cache-to: type=gha
