--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -200,9 +200,10 @@ jobs:
         env:
           DOCKER_METADATA_PR_HEAD_SHA: "true"
         with:
-          images: JohnnyMorganz/StyLua
+          images: johnnymorganz/stylua
           tags: |
             type=semver,pattern={{version}}
+            type=sha
 
       - uses: docker/login-action@v2
         with:
