--- a/stylua-vscode/package.json
+++ b/stylua-vscode/package.json
@@ -13,7 +13,7 @@
   },
   "license": "MPL-2.0",
   "icon": "assets/icon.png",
-  "version": "1.4.0",
+  "version": "1.5.0",
   "engines": {
     "vscode": "^1.53.0"
   },
@@ -28,7 +28,7 @@
   ],
   "activationEvents": [
     "onLanguage:lua",
-    "onCommand:stylua.reinstall"
+    "onLanguage:luau"
   ],
   "main": "./out/extension.js",
   "contributes": {
@@ -52,6 +52,8 @@
           "default": "latest",
           "enum": [
             "latest",
+            "v0.17",
+            "v0.16",
             "v0.15",
             "v0.14",
             "v0.13",
