--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,6 +51,30 @@ jobs:
           rustup target add wasm32-unknown-unknown
           cargo check --target wasm32-unknown-unknown
 
+  test_wasm_build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Install Rust
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          target: wasm32-unknown-unknown
+          override: true
+          profile: minimal
+
+      - name: Setup Node
+        uses: actions/setup-node@v2
+        with:
+          node-version: "14.x"
+          registry-url: "https://registry.npmjs.org"
+
+      - name: Test Build (wasm-pack)
+        run: |
+          chmod u+x ./wasm/build-wasm.sh
+          ./wasm/build-wasm.sh
+
   lint:
     runs-on: ubuntu-latest
     steps:
